file-server: web-fetch name argument

--- a/ndncatchunks.htm
+++ b/ndncatchunks.htm
@@ -33,6 +33,7 @@
 </fieldset></form>
 
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.2"></script>
+<script src="https://cdn.jsdelivr.net/npm/js-url@2.3"></script>
 <script src="https://cdn.jsdelivr.net/gh/named-data/ndn-js@88e23edb3b5eaac375bb164cf4af19f0d6c9fe3e/build/ndn.min.js"></script>
 <script>
 ndn.noConflict();
@@ -117,4 +118,5 @@ $("#request").submit((evt) => {
 });
 
 $("#save").hide();
+$("#name").val(url("#name"));
 </script>
